[gd_scene load_steps=9 format=3 uid="uid://bsd2yvy8gcnwq"]

[ext_resource type="Script" path="res://Entities/Cow/Cow3D.gd" id="1_fwyro"]
[ext_resource type="PackedScene" uid="uid://bemusdriw3e4o" path="res://Entities/Wolf/Wolf.tscn" id="2_e7vjq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_yv7mv"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="ViewportTexture" id="ViewportTexture_xc8g1"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qq6lo"]
resource_local_to_scene = true
transparency = 2
alpha_scissor_threshold = 0.508
alpha_antialiasing_mode = 0
shading_mode = 2
albedo_texture = SubResource("ViewportTexture_xc8g1")
texture_filter = 0
texture_repeat = false
disable_receive_shadows = true

[sub_resource type="ViewportTexture" id="ViewportTexture_3juk3"]
viewport_path = NodePath("SubViewport")

[sub_resource type="BoxShape3D" id="BoxShape3D_4oqch"]
size = Vector3(6, 1, 5)

[sub_resource type="BoxShape3D" id="BoxShape3D_b4a3v"]
size = Vector3(4, 1, 3)

[node name="Cow" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.03051, 3.22969, 0)
script = ExtResource("1_fwyro")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_yv7mv")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.999999, 0, 0, 0, 1, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_qq6lo")
shaded = true
alpha_cut = 1
texture_filter = 0
texture = SubResource("ViewportTexture_3juk3")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
msaa_2d = 3
size = Vector2i(64, 64)
size_2d_override = Vector2i(64, 64)

[node name="Node2D" parent="SubViewport" instance=ExtResource("2_e7vjq")]
texture_filter = 1

[node name="AreaWalk" type="Area3D" parent="."]

[node name="Zone2" type="CollisionShape3D" parent="AreaWalk"]
shape = SubResource("BoxShape3D_4oqch")

[node name="AreaFlee" type="Area3D" parent="."]

[node name="Zone3" type="CollisionShape3D" parent="AreaFlee"]
shape = SubResource("BoxShape3D_b4a3v")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.422507, 0)
text = "COUCOU"

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(-3, 0, 0)
collide_with_areas = true

[node name="Patrol_pos" type="Node3D" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="isFleeing" type="Timer" parent="."]

[connection signal="body_entered" from="AreaWalk" to="." method="_on_area_walk_body_entered"]
[connection signal="body_exited" from="AreaWalk" to="." method="_on_area_walk_body_exited"]
[connection signal="body_entered" from="AreaFlee" to="." method="_on_area_flee_body_entered"]
[connection signal="body_exited" from="AreaFlee" to="." method="_on_area_flee_body_exited"]
